--- a/po/nl.po
+++ b/po/nl.po
@@ -1,15 +1,15 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the Folder icon maker package.
+# This file is distributed under the same license as the Iconic package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # Youpie <youplamb@hotmail.nl>, 2024.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Folder icon maker\n"
+"Project-Id-Version: Iconic\n"
 "Report-Msgid-Bugs-To: https://github.com/youpie/Folder_icon_creator\n"
-"POT-Creation-Date: 2024-07-11 13:55+0200\n"
-"PO-Revision-Date: 2024-07-11 14:07+0200\n"
+"POT-Creation-Date: 2024-07-17 16:57+0200\n"
+"PO-Revision-Date: 2024-07-17 17:10+0200\n"
 "Last-Translator: Youpie <youplamb@hotmail.nl>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -20,13 +20,10 @@ msgstr ""
 "X-Generator: Gtranslator 46.1\n"
 
 #: data/nl.emphisia.icon.desktop.in.in:3
-msgid "Folder icon creator"
-msgstr "Folder icoon maker"
-
-#: data/nl.emphisia.icon.metainfo.xml.in.in:5 src/window.blp:19
-#: src/window.blp:76
-msgid "Folder Icon Maker"
-msgstr "Folder icoon maker"
+#: data/nl.emphisia.icon.metainfo.xml.in.in:5
+#: data/nl.emphisia.icon.metainfo.xml.in.in:55
+msgid "Iconic"
+msgstr "Iconic"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:6
 msgid "Easilly add icons on top of folders"
@@ -34,27 +31,27 @@ msgstr "Voeg gemakkelijk iconen toe aan folders"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:8
 msgid "Youpie"
-msgstr ""
+msgstr "Youpie"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:14
 msgid ""
 "This program allows an easy and intuitive way to add an icon on top of a "
 "folder to help you differentiate it better."
 msgstr ""
-"Dit programma biedt een makkelijke en intuitive manier om iconen toe te "
-"voegen aan folders om deze makkelijker te onderscheiden"
+"Dit programma biedt een makkelijke en intiutive manier om iconen toe te "
+"voegen aan folders om deze beter te differentiëren"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:15
 msgid ""
 "This program is written in Rust and Libadwaita and is my first attempt at "
 "creating an application"
 msgstr ""
-"Dit programma is geschreven in Rust en Libadwaita en is mijn eerste poging "
-"met het maken van een programma"
+"Dit programma is geschreven in Rust en Libadwaita en dit is mijn eerste "
+"poging om een programma te schrijven"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:19
 msgid "Begin screen of application"
-msgstr "Start scherm van het programma"
+msgstr "Begin scherm van het programma"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:23
 msgid "Main menu in light mode"
@@ -64,41 +61,41 @@ msgstr "Hoofdmenu in light mode"
 msgid "Main menu in dark mode"
 msgstr "Hoofdmenu in dark mode"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:51
+#: data/nl.emphisia.icon.metainfo.xml.in.in:46
 msgid "icon"
 msgstr "icoon"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:52
+#: data/nl.emphisia.icon.metainfo.xml.in.in:47
 msgid "create"
-msgstr "Creëer"
+msgstr "maken"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:53
+#: data/nl.emphisia.icon.metainfo.xml.in.in:48
 msgid "folder icon"
-msgstr "Folder icoon"
+msgstr "folder icoon"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:54
+#: data/nl.emphisia.icon.metainfo.xml.in.in:49
 msgid "svg"
 msgstr "svg"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:55
+#: data/nl.emphisia.icon.metainfo.xml.in.in:50
 msgid "png"
 msgstr "png"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:56
+#: data/nl.emphisia.icon.metainfo.xml.in.in:51
 msgid "gnome"
 msgstr "gnome"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:57
+#: data/nl.emphisia.icon.metainfo.xml.in.in:52
 msgid "icon create"
-msgstr "Icoon maak"
+msgstr "icoon maken"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:58
+#: data/nl.emphisia.icon.metainfo.xml.in.in:53
 msgid "icon creator"
-msgstr "Icoon maker"
+msgstr "icoon maker"
 
-#: data/nl.emphisia.icon.metainfo.xml.in.in:59
+#: data/nl.emphisia.icon.metainfo.xml.in.in:54
 msgid "folder icon creator"
-msgstr "Folder icoon maker"
+msgstr "folder icoon maker"
 
 #: src/gtk/help-overlay.blp:11
 msgctxt "shortcut window"
@@ -113,7 +110,7 @@ msgstr "Sneltoetsen"
 #: src/gtk/help-overlay.blp:19
 msgctxt "shortcut window"
 msgid "Quit"
-msgstr "Sluiten"
+msgstr "Afsluiten"
 
 #: src/gtk/help-overlay.blp:24
 msgctxt "shortcut window"
@@ -131,11 +128,11 @@ msgstr "Algemeen"
 
 #: src/settings/settings.blp:10
 msgid "Customise"
-msgstr "Bewerken"
+msgstr "Aanpassen"
 
 #: src/settings/settings.blp:29
 msgid "Currently set folder icon"
-msgstr "Op dit moment ingestelde folder afbeelding"
+msgstr "Huidig ingestelde folder afbeelding"
 
 #: src/settings/settings.blp:34
 msgid "Advanced"
@@ -143,7 +140,8 @@ msgstr "Geadvanceerd"
 
 #: src/settings/settings.blp:37
 msgid "You can see these options because you have enabled the Devel profile"
-msgstr "Je kan deze opties zien omdat je het Devel profiel hebt geselecteerd"
+msgstr ""
+"Je kan deze opties zien omdat je het \"Devel\" profiel hebt geactiveerd"
 
 #: src/settings/settings.blp:45
 msgid "Select size of SVG images"
@@ -154,32 +152,30 @@ msgid ""
 "SVG images will by default be converted to a 1024x1024 image. You can adjust "
 "that here"
 msgstr ""
-"SVG afbeeldingen worden standaard omgezet in een 1024x1024 afbeelding. Dat "
+"SVG afbeeldingen worden standaard omgezet naar een 1024x1024 afbeelding. Dat "
 "kan je hier aanpassen"
 
 #: src/settings/settings.blp:56
 msgid "Select size of Thumbnail images"
-msgstr "Selecteer grootte van de Thumbnail afbeeldingen"
+msgstr ""
 
 #: src/settings/settings.blp:57
 msgid ""
 "Thumbnail images will by default be converted to a 255x255 image. You can "
 "adjust that here"
 msgstr ""
-"Thumbnail afbeeldingen worden standaard omgezet naar een 255x255 afbeelding. "
-"Dat kan je hier aanpassen"
 
 #: src/window.blp:25 src/window.blp:82
 msgid "Menu"
 msgstr "Menu"
 
 #: src/window.blp:31
-msgid "Folder Icon Generator"
-msgstr "Folder Icoon maker"
+msgid "Folder Icon Creator"
+msgstr "Folder Icoon Maker"
 
 #: src/window.blp:32
 msgid "Click to Open Image"
-msgstr "Klik om een afbeelding te openen"
+msgstr "Klik om afbeelding te openen"
 
 #: src/window.blp:43
 msgid "_Open Image"
@@ -187,11 +183,11 @@ msgstr "_Open afbeelding"
 
 #: src/window.blp:279
 msgid "_Open Top Icon"
-msgstr "_Open Bovenste Icoon"
+msgstr "_Open bovenste Icoon"
 
 #: src/window.blp:284
 msgid "_Open Folder Icon"
-msgstr "_Open Folder Afbeelding"
+msgstr "_Open Folder Icoon"
 
 #: src/window.blp:290
 msgid "_Preferences"
@@ -203,7 +199,7 @@ msgstr "_Sneltoetsen"
 
 #: src/window.blp:300
 msgid "_About folder icon maker"
-msgstr "_Over Folder Icoon Maker"
+msgstr "_Over Iconic"
 
 #: src/settings/settings.rs:136 src/window.rs:501
 msgid "Open Document"
@@ -211,15 +207,15 @@ msgstr "Open Document"
 
 #: src/window.rs:354
 msgid "Save Changes?"
-msgstr "Wijzigingen Opslaan?"
+msgstr "Veranderingen Opslaan?"
 
 #: src/window.rs:355
 msgid ""
 "Open image contain unsaved changes. Changes which are not saved will be "
 "permanently lost"
 msgstr ""
-"Geopende afbeelding bevat niet-opgeslagen veranderingen. Veranderingen die "
-"niet zijn opgeslagen gaan permanent verloren"
+"Open afbeelding bevat niet-opgeslagen veranderingen. Niet opgeslagen "
+"veranderingen gaan permanent verloren"
 
 #: src/window.rs:359
 msgid "Cancel"
@@ -227,7 +223,7 @@ msgstr "Annuleer"
 
 #: src/window.rs:360
 msgid "Discard"
-msgstr "Wijzigingen Verwerpen"
+msgstr "Verwerpen"
 
 #: src/window.rs:362
 msgid "Save"
