removed incorrect date

--- a/po/nl.po
+++ b/po/nl.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Iconic\n"
 "Report-Msgid-Bugs-To: https://github.com/youpie/Folder_icon_creator\n"
 "POT-Creation-Date: 2025-10-01 00:01+0200\n"
-"PO-Revision-Date: 2025-10-01 00:20+0200\n"
+"PO-Revision-Date: 2025-10-02 12:18+0200\n"
 "Last-Translator: Youpie <youplamb@hotmail.nl>\n"
 "Language-Team: Dutch\n"
 "Language: nl\n"
@@ -79,9 +79,9 @@ msgid ""
 "Free Palestine🇵🇸. After a long wait, a new Iconic release is finally here! "
 "Featuring fun new features and fixes!"
 msgstr ""
-"Free Palestine🇵🇸. Kabinet waar blijft de rode lijn (3 Okt, Amsterdam). Na "
-"lang wachten is het daar dan eindelijk. Een nieuwe Iconic versie! Met veel "
-"leuke nieuwe functies en verbeteringen!"
+"Free Palestine🇵🇸. Kabinet waar blijft de rode lijn. Na lang wachten is het "
+"daar dan eindelijk. Een nieuwe Iconic versie! Met veel leuke nieuwe functies "
+"en verbeteringen!"
 
 #: data/nl.emphisia.icon.metainfo.xml.in.in:41
 msgid "Updated to Gnome 49"
@@ -1159,8 +1159,8 @@ msgstr "Regeneratie gelukt, herstart Nautilus"
 
 #~ msgid "If enabled, folders with custom colors will not be regenerated"
 #~ msgstr ""
-#~ "Als ingeschakeld zullen folders met aangepaste kleuren niet "
-#~ "geregenereerd worden"
+#~ "Als ingeschakeld zullen folders met aangepaste kleuren niet geregenereerd "
+#~ "worden"
 
 #~ msgid ""
 #~ "If disabled, folder icons can't be regenerated for different system "
